--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Restaurant">
-        <activity android:name=".MainActivity"
-            android:theme="@style/Theme.Restaurant.NoActionBar"></activity>
+        <activity android:name=".SplashActivity"></activity>
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/Theme.Restaurant.NoActionBar" />
         <activity
             android:name=".IntroPageActivity"
             android:theme="@style/Theme.Restaurant.NoActionBar">
