--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Restaurant">
-        <activity android:name=".SplashActivity"></activity>
-        <activity
-            android:name=".MainActivity"
-            android:theme="@style/Theme.Restaurant.NoActionBar" />
-        <activity
-            android:name=".IntroPageActivity"
+        <activity android:name=".SplashActivity"
             android:theme="@style/Theme.Restaurant.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/Theme.Restaurant.NoActionBar" />
+        <activity
+            android:name=".IntroPageActivity"
+            android:theme="@style/Theme.Restaurant.NoActionBar">
+
         </activity>
     </application>
 
