--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Restaurant">
-        <activity android:name=".SplashActivity"
+        <activity android:name=".Profile"></activity>
+        <activity android:name=".Cart"
+                  android:theme="@style/Theme.Restaurant.NoActionBar" />
+        <activity
+            android:name=".SplashActivity"
             android:theme="@style/Theme.Restaurant.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,9 +26,7 @@
             android:theme="@style/Theme.Restaurant.NoActionBar" />
         <activity
             android:name=".IntroPageActivity"
-            android:theme="@style/Theme.Restaurant.NoActionBar">
-
-        </activity>
+            android:theme="@style/Theme.Restaurant.NoActionBar" />
     </application>
 
 </manifest>
