--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.isil.restaurant">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Restaurant">
-        <activity android:name=".SplashActivity"
+        <activity android:name=".CategoryActivity"></activity>
+        <activity
+            android:name=".SplashActivity"
             android:theme="@style/Theme.Restaurant.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,9 +24,7 @@
             android:theme="@style/Theme.Restaurant.NoActionBar" />
         <activity
             android:name=".IntroPageActivity"
-            android:theme="@style/Theme.Restaurant.NoActionBar">
-
-        </activity>
+            android:theme="@style/Theme.Restaurant.NoActionBar"></activity>
     </application>
 
 </manifest>
