--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.isil.restaurant">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,10 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Restaurant">
-        <activity android:name=".CategoryActivity"></activity>
-        <activity android:name=".Profile"></activity>
-        <activity android:name=".Cart"
-                  android:theme="@style/Theme.Restaurant.NoActionBar" />
+        <activity android:name=".RecoverPasswordActivity"></activity>
+        <activity android:name=".SignUpActivity" />
+        <activity   android:name=".LoginActivity"
+                    android:theme="@style/Theme.Restaurant.NoActionBar"/>
+        <activity android:name=".ShoppingCart" />
+        <activity android:name=".CategoryActivity" />
+        <activity android:name=".ProfileActivity" />
         <activity
             android:name=".SplashActivity"
             android:theme="@style/Theme.Restaurant.NoActionBar">
@@ -22,13 +27,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MainActivity"
-            android:theme="@style/Theme.Restaurant.NoActionBar" />
+        <activity android:name=".MainActivity" />
         <activity
             android:name=".IntroPageActivity"
-            android:theme="@style/Theme.Restaurant.NoActionBar"></activity>
-
+            android:theme="@style/Theme.Restaurant.NoActionBar" />
     </application>
 
 </manifest>
