--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,19 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Restaurant">
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
         <activity android:name=".StoresActivity"></activity>
         <activity android:name=".RecommendationActivity" />
         <activity android:name=".NosotrosActivity" />
         <activity android:name=".RecoverPasswordActivity" />
         <activity android:name=".SignUpActivity" />
+
         <activity
             android:name=".LoginActivity"
             android:theme="@style/Theme.Restaurant.NoActionBar" />
@@ -32,6 +37,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
+        <activity android:name=".ServiciosActivity" />
         <activity
             android:name=".IntroPageActivity"
             android:theme="@style/Theme.Restaurant.NoActionBar" />
