--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,19 +8,24 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Restaurant">
+        android:theme="@style/Theme.Restaurant"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".CashActivity"
+            android:label="@string/title_activity_cash"
+            android:theme="@style/Theme.Restaurant.NoActionBar"></activity>
+
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
-        <activity android:name=".StoresActivity"></activity>
+
+        <activity android:name=".StoresActivity" />
         <activity android:name=".RecommendationActivity" />
         <activity android:name=".NosotrosActivity" />
         <activity android:name=".RecoverPasswordActivity" />
         <activity android:name=".SignUpActivity" />
-
         <activity
             android:name=".LoginActivity"
             android:theme="@style/Theme.Restaurant.NoActionBar" />
